# bsky-umap

./: .gitignore  .gitmodules  CLAUDE.md  Makefile  README.md  anneal.py  arrow_to_vortex.py  atlas.sh  cluster.py  colors.py  edge_weights.py  embedding.py  find_params.py  fss.py  fuzzy_simplicial_set.py  ggvec-gpu.py  ggvec.py  graph_utils.py  histogram.py  hues.py  kmeans_cluster.py  knn.py  labels.py  load_graph.py  monitor.sh  nnvec.py  plot.py  plot_distribution.py  plot_labels.py  positions.py  project-sparse.py  project.py  pyproject.toml  pyrightconfig.json  rcm.py  rcm_csr.py  rcm_mutuals.py  rcm_perm.py  rcm_perm_apply.py  requirements.txt  (+22 more)
atlas/: README.md  build.zig  build.zig.zon  test.mjs
atlas/lib/: lib.zig
atlas/src/: Atlas.zig  Quadtree.zig  main.zig
quadtree/: quadtree.py
quadtree-partitions/: build.zig  build.zig.zon
quadtree-partitions/lib/: lib.zig
quadtree-partitions/src/: Atlas.zig  File.zig  main.zig
