[project]
name = "bsky-umap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bokeh>=3.8.0",
    "colorcet>=3.1.0",
    "datashader>=0.18.2",
    "holoviews>=1.21.0",
    "hsluv==5.0.4",
    "matplotlib>=3.10.6",
    "numba>=0.61.2",
    "numpy>=1.26.4",
    "pandas>=2.3.3",
    "pyarrow==19.0.0",
    "pycairo>=1.28.0",
    "pygobject>=3.54.3",
    "pynndescent>=0.5.13",
    "python-dotenv==1.0.1",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.6.1",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
    "umap-learn>=0.5.9.post2",
]

[tool.ruff]
line-length = 88
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]

# Ignore f-string without placeholders
ignore = ["F541"]

[dependency-groups]
dev = [
    "ruff>=0.12.0",
]
